# KAIST_RE540_2024

./: README.md
Week5/graph_planner/: CMakeLists.txt  package.xml
Week5/graph_planner/csv/: graph_planner_gazebo.csv
Week5/graph_planner/include/graph_planner/: graph_planner.h
Week5/graph_planner/launch/: graph_planner.launch
Week5/graph_planner/src/: graph_planner.cpp
Week5/local_costmap_generator/: CMakeLists.txt  LICENSE  README.md  nodelets.xml  package.xml
Week5/local_costmap_generator/include/local_costmap_generator/: heightmap.h
Week5/local_costmap_generator/launch/: run.launch
Week5/local_costmap_generator/src/: heightmap.cpp  heightmap_node.cpp  heightmap_nodelet.cpp  heightmap_to_costmap.cpp
Week5/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/launch/: nexus_4wd_mecanum_description.launch
Week5/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/urdf/: nexus_4wd_mecanum.gazebo  nexus_4wd_mecanum.xacro
Week5/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/launch/: nexus_4wd_mecanum_world.launch
Week5/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/src/: control_plugin.py
Week5/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/worlds/: obstacles.world
Week5/nexus_4wd_mecanum_simulator/realsense_gazebo_plugin/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro
Week5/rviz/: re540.rviz
