<package>

  <name>local_costmap_generator</name>
  <version>1.0.0</version>
  <description>
    Height map algorithm-based costmap generator.
  </description>
  <maintainer email="hynkis@kaist.ac.kr">Hyunki Seong</maintainer>
  <author>Hyunki Seong</author>
  <license>BSD</license>
  <url type="repository">https://github.com/hynkis/local_costmap_generator.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <test_depend>velodyne_driver</test_depend>
  <test_depend>velodyne_pointcloud</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>

</package>
